--- a/HolaMundo/index.html
+++ b/HolaMundo/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
-    <title>ABC of bleeding control</title>
+    <title>ALA VERGA JOTOS</title>
     <link rel="stylesheet" href="style.css"/>
 
     <!-- Material Symbols (Google Icons) -->
@@ -32,7 +32,7 @@
               <span id="count">08</span>/<span id="total">15</span>
             </div>
           </div>
-
+          <img url=""
           <section class="cards" aria-label="steps list">
             <article class="card card--primary" data-letter="A">
               <div class="card__icon">
