--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <span class="ms">battery_full</span>
           </div>
         </header>
-
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQg-95bOuHUU9FA3C0I_jP761U8HPbEgMWzUg&s"/>
         <main class="app" role="main">
           <div class="hero">
             <h1 class="hero__title">ABC of<br/>bleeding control</h1>
